--- a/MY_WEBSITE/index.html
+++ b/MY_WEBSITE/index.html
@@ -1,14 +1,103 @@
-<!--
-author Ethan Bastian 11 Mipa 2
-email ethanbastian11@gmail.com
-create date 2022-07-28 16:53:30
--->
-
+<!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <p>Hello World</p>
-    </body>
+<head>
+	<title>Login Page</title>
+	<style>
+		body {
+			background-color: #2c3e50;
+			font-family: Arial, sans-serif;
+			color: #fff;
+		}
+		.container {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			box-sizing: border-box;
+			width: 400px;
+			padding: 40px;
+			background-color: #34495e;
+			box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+			border-radius: 10px;
+			border: 5px solid #2980b9;
+			animation: border-glow 2s ease-in-out infinite;
+		}
+		@keyframes border-glow {
+			0% {
+				border-color: #2980b9;
+				box-shadow: 0 0 20px rgba(41, 128, 185, 0.5);
+			}
+			50% {
+				border-color: #2ecc71;
+				box-shadow: 0 0 20px rgba(46, 204, 113, 0.5);
+			}
+			100% {
+				border-color: #3498db;
+				box-shadow: 0 0 20px rgba(52, 152, 219, 0.5);
+			}
+		}
+		h2 {
+			margin: 0 0 20px;
+			text-align: center;
+			font-size: 28px;
+			font-weight: 700;
+		}
+		label {
+			display: block;
+			margin-bottom: 8px;
+			font-size: 16px;
+			font-weight: 500;
+		}
+		input[type="text"],
+		input[type="password"] {
+			display: block;
+			box-sizing: border-box;
+			width: 100%;
+			padding: 8px;
+			border-radius: 5px;
+			border: none;
+			background-color: #2c3e50;
+			color: #fff;
+			font-size: 16px;
+			margin-bottom: 20px;
+			box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+		}
+		input[type="submit"] {
+			background-color: #3498db;
+			color: #fff;
+			font-size: 16px;
+			font-weight: 500;
+			padding: 10px 16px;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+			transition: background-color 0.3s;
+		}
+		input[type="submit"]:hover {
+			background-color: #2980b9;
+		}
+	</style>
+</head>
+<body>
+	<div class="container">
+		<h2>Login</h2>
+		<form>
+			<label for="username">Username:</label>
+			<input type="text" id="username" name="username" required>
+			<label for="password">Password:</label>
+			<input type="password" id="password" name="password" required>
+			<input type="submit" value="Login">
+		</form>
+	</div>
+    <div class="login-form">
+        <h1>Login</h1>
+        <form>
+          <input type="text" id="username" placeholder="Username">
+          <input type="password" id="password" placeholder="Password">
+          <button type="submit" id="login-btn">Login</button>
+        </form>
+        <div class="create-user-link">Create new user</div>
+    </div>
+      
+</body>
 </html>
